--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -18,4 +18,5 @@ packages:
   ezo_co2: !include common/ezo_co2.yaml
   # ezo_do: !include common/ezo_do.yaml
   ezo_pmp: !include common/ezo_pmp.yaml
+  ezo_pmp_change: !include common/ezo_pmp_change.yaml
   # ezo_commands: !include common/ezo_commands.yaml
