--- a/common/ezo_ec.yaml
+++ b/common/ezo_ec.yaml
@@ -27,7 +27,7 @@ api:
       then:
       - lambda: |-
           id(ec_ezo).set_calibration_generic(80000);
-    - service: ezo_EC_custom_command
+    - service: ezo_ec_custom_command
       variables:
         command: string
       then:
