--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -40,9 +40,9 @@ wifi:
 
 captive_portal:
 
-# Sets up Bluetooth LE (Only on ESP32) to allow the user to provision wifi credentials to the device.
-esp32_improv:
-  authorizer: none
+# # Sets up Bluetooth LE (Only on ESP32) to allow the user to provision wifi credentials to the device.
+# esp32_improv:
+#   authorizer: none
   
 improv_serial:
 
