--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -3,7 +3,7 @@ substitutions:
   name: "aquapi"
   friendly_name: "AquaPi"
   # App Version - Updated: 11/2023
-  app_version: "1.5.1"
+  app_version: "1.6"
 
 packages:
   device_base: !include common/device_base.yaml
@@ -19,3 +19,4 @@ packages:
   debug: !include common/debug.yaml
   ezo_pmp: !include common/ezo_pmp.yaml
   ezo_pmp_change: !include common/ezo_pmp_change.yaml
+  # ezo_commands: !include common/ezo_commands.yaml
