--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -19,4 +19,4 @@ packages:
   ezo_pmp: !include common/ezo_pmp.yaml
   ezo_pmp_change: !include common/ezo_pmp_change.yaml
   # ezo_commands: !include common/ezo_commands.yaml
-  debug: !include common/debug.yaml
+  # debug: !include common/debug.yaml
