--- a/static/_config.yml
+++ b/static/_config.yml
@@ -1,6 +1,6 @@
 # CHANGEME: Set these variable to your liking
 title: AquaPi powered by ESPHome
-icon: assests/AquaPi_Logo_layoutwhite.png
+logo: assests/AquaPi_Logo_layoutwhite.png
 description: Powered by HomeAssistant & ESPHome
 show_downloads: false
 google_analytics: G-BPGR2QSCVL
