--- a/static/_config.yml
+++ b/static/_config.yml
@@ -4,4 +4,4 @@ logo: assests/AquaPiLogo_small.png
 description: Powered by HomeAssistant & ESPHome
 show_downloads: false
 google_analytics: G-BPGR2QSCVL
-theme: jekyll-theme-cayman
+remote_theme: reverie
