--- a/static/_config.yml
+++ b/static/_config.yml
@@ -1,7 +1,7 @@
 # CHANGEME: Set these variable to your liking
 title: AquaPi powered by ESPHome
-avatar: assests/AquaPiLogo_small.png
+avatar: assests/logo88x88.png
 description: Powered by HomeAssistant & ESPHome
 show_downloads: false
 google_analytics: G-BPGR2QSCVL
-remote_theme: reverie
+remote_theme: minimal-mistakes
