--- a/static/_config.yml
+++ b/static/_config.yml
@@ -4,6 +4,6 @@ logo: assests/logo88x88.png
 description: Powered by HomeAssistant & ESPHome
 show_downloads: false
 google_analytics: G-BPGR2QSCVL
-remote_theme: minimal-mistakes
+remote_theme: mmistakes/minimal-mistakes
 author:
   avatar: assests/logo88x88.png
