--- a/static/_config.yml
+++ b/static/_config.yml
@@ -5,3 +5,5 @@ show_downloads: false
 google_analytics: G-BPGR2QSCVL
 # theme: jekyll-theme-minima
 remote_theme: jekyll/minima
+minima:
+  skin: auto
