--- a/static/_config.yml
+++ b/static/_config.yml
@@ -1,4 +1,4 @@
-title: AquaPi for ESPHome
+title: AquaPi
 logo: assests/AquaPiLogo_small.png
 description: Powered by HomeAssistant & ESPHome
 show_downloads: false
