--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -1,6 +1,6 @@
 substitutions:
   # names
-  name: "aquapiTEST"
+  name: "aquapi"
   friendly_name: "AquaPi TEST"
   # App Version - Updated: 11/2023
   app_version: "1.6.1-test"
