--- a/common/ezo_pmp_change.yaml
+++ b/common/ezo_pmp_change.yaml
@@ -142,6 +142,7 @@ sensor:
       name: Pump Waste - Current Volume Dosed
       icon: mdi:cube-scan
       device_class: 'volume'
+      state_class: total
       unit_of_measurement: 'mL'
   - platform: ezo_pmp
     id: ezo_pump_waste
@@ -159,6 +160,7 @@ sensor:
       name: Pump Waste - Absolute Total Volume Dosed
       icon: mdi:timer-sand-full
       device_class: 'volume'
+      state_class: total
       unit_of_measurement: 'mL'
   - platform: ezo_pmp
     id: ezo_pump_waste
@@ -166,6 +168,7 @@ sensor:
       id: last_volume_requested_waste
       name: Pump Waste - Last Volume Requested
       icon: mdi:history
+      state_class: total
       device_class: 'volume'
       unit_of_measurement: 'mL'
   - platform: ezo_pmp
@@ -189,6 +192,7 @@ sensor:
       name: Pump Clean - Current Volume Dosed
       icon: mdi:cube-scan
       device_class: 'volume'
+      state_class: total
       unit_of_measurement: 'mL'
   - platform: ezo_pmp
     id: ezo_pump_clean
@@ -206,6 +210,7 @@ sensor:
       name: Pump Clean - Absolute Total Volume Dosed
       icon: mdi:timer-sand-full
       device_class: 'volume'
+      state_class: total
       unit_of_measurement: 'mL'
   - platform: ezo_pmp
     id: ezo_pump_clean
@@ -214,6 +219,7 @@ sensor:
       name: Pump Clean - Last Volume Requested
       icon: mdi:history
       device_class: 'volume'
+      state_class: total
       unit_of_measurement: 'mL'
   - platform: ezo_pmp
     id: ezo_pump_clean
