--- a/common/ezo_ec.yaml
+++ b/common/ezo_ec.yaml
@@ -301,7 +301,7 @@ button:
             if (id(select_command_ec).state == "Check Calibration") {
               id(ec_ezo).get_calibration();
             }  
-            if (id(select_command_ec).state == "Calibrate Dry @ 0 (WILL RESET CALIBRATION)") {
+            if (id(select_command_ec).state == "Calibrate @ 0 (WILL RESET CALIBRATION)") {
               id(ec_ezo).set_calibration_generic(0.00);
             }
             if (id(select_command_ec).state == "Calibrate @ LOW = 12880 (WILL RESET CALIBRATION)") {
