--- a/common/device_base_camera.yaml
+++ b/common/device_base_camera.yaml
@@ -1,20 +1,27 @@
 substitutions:
-  version: "1"
-  suffix: "true"
-  comment: ""
+  # Import Config
+  import_config: "false"
+  # Logger Level - Can use VERBOSE for more information in Logs
   logger: "DEBUG"
 
 esphome:
   name: "${name}"
   friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
-  name_add_mac_suffix: ${suffix}
-  comment: "${comment}"
+  name_add_mac_suffix: true
+  comment: "AquaPiCam ESP32 - Aquarium Camera"
+  project:
+    name: TheRealFalseReality.aquapi
+    version: "${app_version}"
 
 esp32:
   board: esp32dev
   framework:
     type: arduino
+
+dashboard_import:
+  package_import_url: github://TheRealFalseReality/aquapi/aquapi_camera_config.yaml@main
+  import_full_config: ${import_config}
 
 # Enable logging
 logger:
