--- a/common/ezo_ec.yaml
+++ b/common/ezo_ec.yaml
@@ -8,10 +8,10 @@ api:
   services: 
     - service: ec_read_continous
       variables:
-        time: int 
+        seconds: int 
       then:
       - repeat:
-          count: !lambda return time;
+          count: !lambda return seconds;
           then:
           - button.press: read_ec
           - delay: 1s
