--- a/common/ezo_ph.yaml
+++ b/common/ezo_ph.yaml
@@ -7,10 +7,10 @@ api:
   services: 
     - service: ph_read_continous
       variables:
-        time: int
+        seconds: int
       then:
       - repeat:
-          count: !lambda return time;
+          count: !lambda return seconds;
           then:
           - button.press: read_ph
           - delay: 1s
